# AwesomeLog

./: README.md  build.gradle  settings.gradle
Clogan/: aes_util.c  (+6 more)
awesome-log/: CMakeLists.txt  build.gradle  consumer-rules.pro  proguard-rules.pro  project.properties
awesome-log/src/main/: AndroidManifest.xml
awesome-log/src/main/java/com/android/jesse/log/: ALog.java  ALogThreadPool.java  CLoganProtocol.java  CommonInfoWriter.java  ConstantCode.java  LogConfig.java  LogEventType.java  Logan.java  LoganConfig.java  LoganControlCenter.java  LoganModel.java  LoganProtocol.java  LoganProtocolHandler.java  LoganThread.java  OnLoganProtocolStatus.java  SendAction.java  SendLogCallback.java  SendLogDefaultRunnable.java  SendLogRunnable.java  Util.java  WriteAction.java
awesome-log/src/main/java/com/android/jesse/log/Printer/: AndroidLogPrinter.java  DiskLogPrinter.java  Printer.java
awesome-log/src/main/java/com/android/jesse/log/config/: ConfigCenter.java
awesome-log/src/main/java/com/android/jesse/log/encrypt/: LogEncrypt.java
awesome-log/src/main/java/com/android/jesse/log/io/: LightLog.java
awesome-log/src/main/java/com/android/jesse/log/logger/: ALogger.java  Logger.java
awesome-log/src/main/java/com/android/jesse/log/stragety/: CsvFormatStrategy.java  DiskDailyLogStrategy.java  DiskLogStrategy.java  LogStrategy.java  LogcatLogStrategy.java  PrettyFormatStrategy.java
awesome-log/src/main/java/com/android/jesse/log/util/: DateUtil.java  FileUtils.java  LogUtils.java  NetworkManager.java
awesome-log/src/main/jni/: clogan_protocol.c  clogan_protocol.h
(+33 files in other folders)
